# OPC-Example

./: README.md
example/client/src/: example_client.cpp
example/server/build2/: CMakeCache.txt
example/server/src/: example_server.cpp
test/server/src/: example_server.cpp
test_path/client/: CMakeLists.txt
test_path/client/src/: example_client.cpp
test_path/server/: CMakeLists.txt
test_path/server/src/: example_server.cpp
